tests/coverage/misc/fail/early_errors/module_context/002_import_in_script.js
// Intended for script-mode parsing.
import { imported_value } from './module.js';
